Week-1 Assignment Added

--- a/Assignments/Week-1.ipynb
+++ b/Assignments/Week-1.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write Github URL "
+    "url = 'https://github.com/harshitgupta5/Chest-Pneumonia-Detection.git'"
    ]
   },
   {
@@ -56,13 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Positive\n"
+    }
+   ],
    "source": [
     "# Write Your Code Here with Proper Comments\n",
-    "\n",
-    "\n"
+    "n = int(input())        #Input number from user\n",
+    "if n>0:             \n",
+    "    print('Positive')   #Check for Positive\n",
+    "elif n<0:\n",
+    "    print('Negative')   #Check for Negative\n",
+    "else:\n",
+    "    print('Zero')"
    ]
   },
   {
@@ -75,13 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "3\n"
+    }
+   ],
    "source": [
-    "# Write Your Code Here with Proper Comments\n",
-    "\n",
-    "\n"
+    "a,b,c = list(map(int,input().split()))\n",
+    "print(a if a>b and a>c else b if b>a and b>c else c)"
    ]
   },
   {
@@ -98,13 +114,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "30\n"
+    }
+   ],
    "source": [
-    "# Write Your Code Here with Proper Comments\n",
-    "\n",
-    "\n"
+    "months = dict()\n",
+    "thirty_one = ['January','March','May','July','August','October','December']\n",
+    "thirty = ['April','June','September','November']\n",
+    "for month in thirty_one:\n",
+    "    months[month] = 31\n",
+    "for month in thirty:\n",
+    "    months[month] = 30\n",
+    "months['February'] = '28/29'\n",
+    "print(months[input()])"
    ]
   },
   {
@@ -120,10 +148,25 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "120\n"
+    }
+   ],
    "source": [
     "# Write Your Code Here with Proper Comments\n",
+    "factorial = dict()\n",
+    "factorial[1] = 1\n",
+    "def fact(n):\n",
+    "    if n in factorial.keys():       #check in DP Dictionary\n",
+    "        return factorial[n]         #return value\n",
+    "    else:\n",
+    "        factorial[n] = fact(n-1) * n    #Fill in DP dict\n",
+    "    return factorial[n]                 return value\n",
     "\n",
+    "print(fact(int(input())))\n",
     "\n"
    ]
   },
@@ -141,12 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Some professor email addresses were entered\n"
+    }
+   ],
    "source": [
-    "# Write Your Code Here with Proper Comments\n",
-    "\n",
+    "n = int(input(\"Enter no. of email addresses\")) #Input Number\n",
+    "professor = False\n",
+    "for i in range(n):\n",
+    "    if '@prof.college.edu' in input():          #Check for professor email address\n",
+    "        professor = True\n",
+    "print('Some professor email addresses were entered' if professor else 'All addressed were student addresses')\n",
     "\n"
    ]
   },
@@ -168,12 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "bag,hello,without,world\n"
+    }
+   ],
    "source": [
-    "# Write Your Code Here with Proper Comments\n",
-    "\n"
+    "print(','.join(sorted(input().split(','))))\n"
    ]
   },
   {
@@ -186,12 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write Your Code Here with Proper Comments\n",
     "\n",
+    "def showEmployee(empName,empSalary = 9000):                         #Definition of Function\n",
+    "    print('Employee Name:',empName,'\\n Employee Salary:',empSalary) #Print Details\n",
+    "    return\n",
     "\n"
    ]
   },
@@ -210,13 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write Your Code Here with Proper Comments\n",
-    "\n",
-    "\n"
+    "def outerFun(a,b):      #OuterFunction\n",
+    "    def innerFun(a,b):  #Inner Function\n",
+    "        return a+b      #Inner Return\n",
+    "    return innerFun(a,b) + 5    #Outer Return"
    ]
   },
   {
@@ -231,12 +292,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Name: a\nAge: 18\n"
+    }
+   ],
    "source": [
     "# Write Your Code Here with Proper Comments\n",
-    "\n"
+    "\n",
+    "def showStudent(name,age):          #Outer Func \n",
+    "    def displayStudent(name,age):   #Inner Func\n",
+    "        print('Name:', name)        #Print\n",
+    "        print('Age:',age)\n",
+    "    return displayStudent(name,age) #Outer Return\n",
+    "showStudent('a','18')               #Function Call"
    ]
   },
   {
@@ -272,13 +345,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Valid\n"
+    }
+   ],
+   "source": [
+    "# Write Your Code Here with Proper Comments\n",
+    "val = ['1','2','3','4','5','6','7','8','9','0','-']     #List for valid entries\n",
+    "number = input('Enter a phone number')                  #Input\n",
+    "valid = True\n",
+    "for d in number:                                        #Check valid characters\n",
+    "    if d not in val:\n",
+    "        valid = False \n",
+    "if valid:\n",
+    "    if number[0] == '1' and number[1] == '-' and number[5]  == '-' and number[9]=='-':  #Check format\n",
+    "        pass\n",
+    "    elif  number[3] == '-' and number[7]=='-':                                          #Check format\n",
+    "        pass\n",
+    "    else:\n",
+    "        valid = False\n",
+    "print('Valid' if valid else 'Invalid')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Write Your Code Here with Proper Comments\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -297,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0-final"
   }
  },
  "nbformat": 4,
